--- a/webview-ui/src/i18n/locales/de/kilocode.json
+++ b/webview-ui/src/i18n/locales/de/kilocode.json
@@ -94,7 +94,8 @@
 				"unknown": "unbekannter Nachrichtentyp",
 				"tool": "Werkzeugnutzung",
 				"use_mcp_server": "MCP-Server-Nutzung",
-				"followup": "Nachfrage"
+				"followup": "Nachfrage",
+				"user": "Nutzerfeedback"
 			},
 			"clickToScroll": "{{messageType}} (#{{messageNumber}}) ansehen"
 		}
