--- a/webview-ui/src/i18n/locales/hi/kilocode.json
+++ b/webview-ui/src/i18n/locales/hi/kilocode.json
@@ -95,7 +95,8 @@
 				"text": "AI प्रतिक्रिया",
 				"unknown": "अज्ञात संदेश प्रकार",
 				"tool": "उपकरण उपयोग",
-				"use_mcp_server": "MCP सर्वर उपयोग"
+				"use_mcp_server": "MCP सर्वर उपयोग",
+				"user": "उपयोगकर्ता प्रतिक्रिया"
 			}
 		}
 	}
