--- a/webview-ui/src/i18n/locales/ko/kilocode.json
+++ b/webview-ui/src/i18n/locales/ko/kilocode.json
@@ -95,7 +95,8 @@
 				"tool": "도구 사용",
 				"unknown": "알 수 없는 메시지 유형",
 				"reasoning": "AI 추론",
-				"use_mcp_server": "MCP 서버 사용량"
+				"use_mcp_server": "MCP 서버 사용량",
+				"user": "사용자 피드백"
 			}
 		}
 	}
