--- a/webview-ui/src/i18n/locales/zh-CN/kilocode.json
+++ b/webview-ui/src/i18n/locales/zh-CN/kilocode.json
@@ -94,7 +94,8 @@
 				"unknown": "未知消息类型",
 				"text": "AI回复",
 				"tool": "工具使用",
-				"use_mcp_server": "MCP 服务器使用情况"
+				"use_mcp_server": "MCP 服务器使用情况",
+				"user": "用户反馈"
 			},
 			"clickToScroll": "查看{{messageType}} (#{{messageNumber}})"
 		}
