--- a/webview-ui/src/i18n/locales/uk/kilocode.json
+++ b/webview-ui/src/i18n/locales/uk/kilocode.json
@@ -95,7 +95,8 @@
 				"text": "відповідь AI",
 				"tool": "використання інструменту",
 				"unknown": "невідомий тип повідомлення",
-				"use_mcp_server": "використання MCP сервера"
+				"use_mcp_server": "використання MCP сервера",
+				"user": "відгуки користувача"
 			}
 		}
 	}
