--- a/webview-ui/src/i18n/locales/cs/kilocode.json
+++ b/webview-ui/src/i18n/locales/cs/kilocode.json
@@ -95,7 +95,8 @@
 				"text": "odpověď AI",
 				"tool": "použití nástroje",
 				"unknown": "neznámý typ zprávy",
-				"use_mcp_server": "použití MCP serveru"
+				"use_mcp_server": "použití MCP serveru",
+				"user": "zpětná vazba uživatele"
 			}
 		}
 	}
