--- a/webview-ui/src/i18n/locales/id/settings.json
+++ b/webview-ui/src/i18n/locales/id/settings.json
@@ -317,6 +317,21 @@
 			"pathLabel": "Jalur Kode Claude",
 			"description": "Jalur opsional ke Claude Code CLI Anda. Defaultnya adalah 'claude' jika tidak diatur.",
 			"placeholder": "Default: claude"
+		},
+		"geminiCli": {
+			"description": "Provider ini menggunakan autentikasi OAuth dari alat Gemini CLI dan tidak memerlukan kunci API.",
+			"oauthPath": "Jalur Kredensial OAuth (opsional)",
+			"oauthPathDescription": "Jalur ke file kredensial OAuth. Biarkan kosong untuk menggunakan lokasi default (~/.gemini/oauth_creds.json).",
+			"instructions": "Jika kamu belum melakukan autentikasi, silakan jalankan",
+			"instructionsContinued": "di terminal kamu terlebih dahulu.",
+			"setupLink": "Instruksi Pengaturan Gemini CLI",
+			"requirementsTitle": "Persyaratan Penting",
+			"requirement1": "Pertama, kamu perlu menginstal alat Gemini CLI",
+			"requirement2": "Kemudian, jalankan gemini di terminal kamu dan pastikan kamu masuk dengan Google",
+			"requirement3": "Hanya bekerja dengan akun Google pribadi (bukan akun Google Workspace)",
+			"requirement4": "Tidak menggunakan kunci API - autentikasi ditangani melalui OAuth",
+			"requirement5": "Memerlukan alat Gemini CLI diinstal dan diautentikasi terlebih dahulu",
+			"freeAccess": "Akses tingkat gratis melalui autentikasi OAuth"
 		}
 	},
 	"browser": {
