--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -317,6 +317,21 @@
 			"pathLabel": "クロードコードパス",
 			"description": "Claude Code CLIへのオプションパス。設定されていない場合、デフォルトは「claude」です。",
 			"placeholder": "デフォルト：claude"
+		},
+		"geminiCli": {
+			"description": "このプロバイダーは Gemini CLI ツールの OAuth 認証を使用し、API キーは必要ありません。",
+			"oauthPath": "OAuth 認証情報パス（オプション）",
+			"oauthPathDescription": "OAuth 認証情報ファイルへのパス。空のままにするとデフォルトの場所（~/.gemini/oauth_creds.json）を使用します。",
+			"instructions": "まだ認証していない場合は、",
+			"instructionsContinued": "をターミナルで最初に実行してください。",
+			"setupLink": "Gemini CLI セットアップ手順",
+			"requirementsTitle": "重要な要件",
+			"requirement1": "まず、Gemini CLI ツールをインストールする必要があります",
+			"requirement2": "次に、ターミナルで gemini を実行し、Google でログインしてください",
+			"requirement3": "個人の Google アカウントでのみ動作します（Google Workspace アカウントは不可）",
+			"requirement4": "API キーは使用しません - 認証は OAuth 経由で処理されます",
+			"requirement5": "Gemini CLI ツールが最初にインストールされ、認証されている必要があります",
+			"freeAccess": "OAuth 認証による無料ティアアクセス"
 		}
 	},
 	"browser": {
