--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -317,6 +317,21 @@
 			"pathLabel": "Ruta del Codi Claude",
 			"description": "Ruta opcional al teu CLI de Claude Code. Per defecte, 'claude' si no s'estableix.",
 			"placeholder": "Per defecte: claude"
+		},
+		"geminiCli": {
+			"description": "Aquest proveïdor utilitza l'autenticació OAuth de l'eina Gemini CLI i no requereix claus API.",
+			"oauthPath": "Ruta de credencials OAuth (opcional)",
+			"oauthPathDescription": "Ruta al fitxer de credencials OAuth. Deixa-ho buit per utilitzar la ubicació per defecte (~/.gemini/oauth_creds.json).",
+			"instructions": "Si encara no t'has autenticat, si us plau executa",
+			"instructionsContinued": "al teu terminal primer.",
+			"setupLink": "Instruccions de configuració de Gemini CLI",
+			"requirementsTitle": "Requisits importants",
+			"requirement1": "Primer, necessites instal·lar l'eina Gemini CLI",
+			"requirement2": "Després, executa gemini al teu terminal i assegura't d'iniciar sessió amb Google",
+			"requirement3": "Només funciona amb comptes personals de Google (no comptes de Google Workspace)",
+			"requirement4": "No utilitza claus API - l'autenticació es gestiona via OAuth",
+			"requirement5": "Requereix que l'eina Gemini CLI estigui instal·lada i autenticada primer",
+			"freeAccess": "Accés de nivell gratuït via autenticació OAuth"
 		}
 	},
 	"browser": {
