--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -317,6 +317,21 @@
 			"pathLabel": "क्लाउड कोड पथ",
 			"description": "आपके क्लाउड कोड सीएलआई का वैकल्पिक पथ। यदि सेट नहीं है तो डिफ़ॉल्ट 'claude' है।",
 			"placeholder": "डिफ़ॉल्ट: claude"
+		},
+		"geminiCli": {
+			"description": "यह प्रदाता Gemini CLI टूल के OAuth प्रमाणीकरण का उपयोग करता है और API कुंजियों की आवश्यकता नहीं है।",
+			"oauthPath": "OAuth क्रेडेंशियल पथ (वैकल्पिक)",
+			"oauthPathDescription": "OAuth क्रेडेंशियल फ़ाइल का पथ। डिफ़ॉल्ट स्थान (~/.gemini/oauth_creds.json) का उपयोग करने के लिए खाली छोड़ें।",
+			"instructions": "यदि तुमने अभी तक प्रमाणीकरण नहीं किया है, तो कृपया चलाएं",
+			"instructionsContinued": "अपने टर्मिनल में पहले।",
+			"setupLink": "Gemini CLI सेटअप निर्देश",
+			"requirementsTitle": "महत्वपूर्ण आवश्यकताएं",
+			"requirement1": "पहले, तुम्हें Gemini CLI टूल इंस्टॉल करना होगा",
+			"requirement2": "फिर, अपने टर्मिनल में gemini चलाएं और सुनिश्चित करें कि तुम Google के साथ लॉग इन करो",
+			"requirement3": "केवल व्यक्तिगत Google खातों के साथ काम करता है (Google Workspace खाते नहीं)",
+			"requirement4": "API कुंजियों का उपयोग नहीं करता - प्रमाणीकरण OAuth के माध्यम से संभाला जाता है",
+			"requirement5": "आवश्यक है कि Gemini CLI टूल पहले इंस्टॉल और प्रमाणित हो",
+			"freeAccess": "OAuth प्रमाणीकरण के माध्यम से मुफ्त टियर पहुंच"
 		}
 	},
 	"browser": {
