--- a/webview-ui/src/i18n/locales/nl/settings.json
+++ b/webview-ui/src/i18n/locales/nl/settings.json
@@ -317,6 +317,21 @@
 			"pathLabel": "Claude Code Pad",
 			"description": "Optioneel pad naar uw Claude Code CLI. Standaard 'claude' als niet ingesteld.",
 			"placeholder": "Standaard: claude"
+		},
+		"geminiCli": {
+			"description": "Deze provider gebruikt OAuth-authenticatie van het Gemini CLI-tool en vereist geen API-sleutels.",
+			"oauthPath": "OAuth-referentiepad (optioneel)",
+			"oauthPathDescription": "Pad naar het OAuth-referentiebestand. Laat leeg om de standaardlocatie te gebruiken (~/.gemini/oauth_creds.json).",
+			"instructions": "Als je nog niet bent geauthenticeerd, voer dan",
+			"instructionsContinued": "eerst uit in je terminal.",
+			"setupLink": "Gemini CLI-installatie-instructies",
+			"requirementsTitle": "Belangrijke vereisten",
+			"requirement1": "Eerst moet je het Gemini CLI-tool installeren",
+			"requirement2": "Voer daarna gemini uit in je terminal en zorg ervoor dat je inlogt met Google",
+			"requirement3": "Werkt alleen met persoonlijke Google-accounts (geen Google Workspace-accounts)",
+			"requirement4": "Gebruikt geen API-sleutels - authenticatie wordt afgehandeld via OAuth",
+			"requirement5": "Vereist dat het Gemini CLI-tool eerst wordt geïnstalleerd en geauthenticeerd",
+			"freeAccess": "Gratis tier-toegang via OAuth-authenticatie"
 		}
 	},
 	"browser": {
