--- a/webview-ui/src/i18n/locales/th/settings.json
+++ b/webview-ui/src/i18n/locales/th/settings.json
@@ -317,6 +317,21 @@
 			"pathLabel": "เส้นทาง Claude Code",
 			"description": "เส้นทางที่ไม่บังคับไปยัง Claude Code CLI ของคุณ ค่าเริ่มต้นคือ 'claude' หากไม่ได้ตั้งค่า",
 			"placeholder": "ค่าเริ่มต้น: claude"
+		},
+		"geminiCli": {
+			"description": "ผู้ให้บริการนี้ใช้การยืนยันตัวตน OAuth จากเครื่องมือ Gemini CLI และไม่ต้องการกุญแจ API",
+			"oauthPath": "เส้นทางข้อมูลประจำตัว OAuth (ไม่บังคับ)",
+			"oauthPathDescription": "เส้นทางไปยังไฟล์ข้อมูลประจำตัว OAuth ปล่อยว่างไว้เพื่อใช้ตำแหน่งเริ่มต้น (~/.gemini/oauth_creds.json)",
+			"instructions": "หากคุณยังไม่ได้ยืนยันตัวตน โปรดรัน",
+			"instructionsContinued": "ใน terminal ของคุณก่อน",
+			"setupLink": "คำแนะนำการตั้งค่า Gemini CLI",
+			"requirementsTitle": "ข้อกำหนดที่สำคัญ",
+			"requirement1": "ก่อนอื่น คุณต้องติดตั้งเครื่องมือ Gemini CLI",
+			"requirement2": "จากนั้น รัน gemini ใน terminal ของคุณและตรวจสอบให้แน่ใจว่าคุณเข้าสู่ระบบด้วย Google",
+			"requirement3": "ใช้งานได้เฉพาะกับบัญชี Google ส่วนตัว (ไม่ใช่บัญชี Google Workspace)",
+			"requirement4": "ไม่ใช้กุญแจ API - การยืนยันตัวตนจัดการผ่าน OAuth",
+			"requirement5": "ต้องการให้เครื่องมือ Gemini CLI ถูกติดตั้งและยืนยันตัวตนก่อน",
+			"freeAccess": "การเข้าถึงระดับฟรีผ่านการยืนยันตัวตน OAuth"
 		}
 	},
 	"browser": {
