--- a/webview-ui/src/i18n/locales/uk/settings.json
+++ b/webview-ui/src/i18n/locales/uk/settings.json
@@ -317,6 +317,21 @@
 			"pathLabel": "Шлях до Claude Code",
 			"description": "Необов'язковий шлях до вашого Claude Code CLI. За замовчуванням 'claude', якщо не встановлено.",
 			"placeholder": "За замовчуванням: claude"
+		},
+		"geminiCli": {
+			"description": "Цей провайдер використовує OAuth-аутентифікацію інструменту Gemini CLI і не потребує API-ключів.",
+			"oauthPath": "Шлях до облікових даних OAuth (необов'язково)",
+			"oauthPathDescription": "Шлях до файлу облікових даних OAuth. Залиште порожнім для використання місця за замовчуванням (~/.gemini/oauth_creds.json).",
+			"instructions": "Якщо ти ще не пройшов аутентифікацію, будь ласка, виконай",
+			"instructionsContinued": "у своєму терміналі спочатку.",
+			"setupLink": "Інструкції налаштування Gemini CLI",
+			"requirementsTitle": "Важливі вимоги",
+			"requirement1": "Спочатку тобі потрібно встановити інструмент Gemini CLI",
+			"requirement2": "Потім запусти gemini у своєму терміналі і переконайся, що увійшов через Google",
+			"requirement3": "Працює лише з особистими обліковими записами Google (не обліковими записами Google Workspace)",
+			"requirement4": "Не використовує API-ключі - аутентифікація здійснюється через OAuth",
+			"requirement5": "Потребує, щоб інструмент Gemini CLI був спочатку встановлений і аутентифікований",
+			"freeAccess": "Безкоштовний доступ через OAuth-аутентифікацію"
 		}
 	},
 	"browser": {
