--- a/webview-ui/src/i18n/locales/zh-TW/settings.json
+++ b/webview-ui/src/i18n/locales/zh-TW/settings.json
@@ -317,6 +317,21 @@
 			"pathLabel": "Claude Code 路徑",
 			"description": "可選的 Claude Code CLI 路徑。如果未設定，則預設為 'claude'。",
 			"placeholder": "預設：claude"
+		},
+		"geminiCli": {
+			"description": "此提供商使用 Gemini CLI 工具的 OAuth 身份驗證，不需要 API 金鑰。",
+			"oauthPath": "OAuth 憑證路徑（可選）",
+			"oauthPathDescription": "OAuth 憑證檔案的路徑。留空以使用預設位置 (~/.gemini/oauth_creds.json)。",
+			"instructions": "如果你還沒有進行身份驗證，請執行",
+			"instructionsContinued": "在你的終端機中首先。",
+			"setupLink": "Gemini CLI 設定說明",
+			"requirementsTitle": "重要要求",
+			"requirement1": "首先，你需要安裝 Gemini CLI 工具",
+			"requirement2": "然後，在你的終端機中執行 gemini 並確保你用 Google 登入",
+			"requirement3": "僅適用於個人 Google 帳戶（不適用於 Google Workspace 帳戶）",
+			"requirement4": "不使用 API 金鑰 - 身份驗證透過 OAuth 處理",
+			"requirement5": "需要首先安裝並驗證 Gemini CLI 工具",
+			"freeAccess": "透過 OAuth 身份驗證的免費層存取"
 		}
 	},
 	"browser": {
